[package]
name = "sgx-bool-registration-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
hex = "0.4.3"
lazy_static = "1.5.0"
sha3 = "0.8.2"
log = { version = "0.4.18", default-features = false }

pallets-api = { git = "https://github.com/ABMatrix/carbon", branch = "feature-incentive-rpcreg" }
ringvrf =  { git = "https://github.com/ABMatrix/carbon", branch = "feature-incentive-rpcreg" }
occlum-ra =  { git = "https://github.com/ABMatrix/carbon", branch = "feature-incentive-rpcreg" }
#node-visitor = { git = "https://github.com/ABMatrix/carbon", branch = "feature-incentive-rpcreg" }

[patch.crates-io]
ring = { git = "https://github.com/sgx-test/ring" ,default-features = false, features = ["alloc"] }

[features]
default = ["occlum-enclave"]
occlum-enclave = []