[package]
name = "sgx-bool-registration-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
hex = "0.4.3"
lazy_static = "1.5.0"
sha3 = "0.8.2"
log = { version = "0.4.18", default-features = false }

pallets-api = { path = "./extern/pallets-api" }
ringvrf =  { path = "./extern/rvrf" }
occlum-ra =  { path = "./extern/occlum-ra/occlum-ra" }

tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.37"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

aes = "0.6"

#[patch.crates-io]
#ring = { git = "https://github.com/sgx-test/ring" ,default-features = false, features = ["alloc"] }

[dev-dependencies]
reqwest = { version = "0.12.5", default-features= false, features = ["rustls-tls"] }

[features]
default = ["occlum-enclave"]
occlum-enclave = []