[package]
name = "sgx-bool-registration-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
hex = "0.4.3"
lazy_static = "1.5.0"
sha3 = "0.8.2"
log = { version = "0.4.18", default-features = false }

pallets-api = { path = "./extern/pallets-api" }
#ringvrf =  { path = "./extern/rvrf" }
occlum-ra =  { git = "https://github.com/boolnetwork/bnk-occlum-ra", package = "bnk-occlum-ra" }

tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.37"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

aes = "0.6"

curve25519-dalek = "4.1.0"
sha2 = { version = "0.8", default-features = false }
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
rand_core = { version = "0.5.1", default-features = false, features = ["getrandom"] }
subtle = "^2.6.1"

#[patch.crates-io]
#ring = { git = "https://github.com/sgx-test/ring" ,default-features = false, features = ["alloc"] }

[dev-dependencies]
reqwest = { version = "0.12.5", default-features= false, features = ["rustls-tls"] }

[features]
default = ["occlum-enclave"]
occlum-enclave = []
